fixed padding when webpage overflows

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -130,6 +130,6 @@ img:hover {
 
 @media (max-width: 500px){
     body {
-        padding-right: 5px;
+        padding-right: 8px;
     }
 }
